@@ -157,7 +157,28 @@ if|if
 condition|(
 name|o
 operator|==
+name|this
+condition|)
+return|return
+literal|true
+return|;
+if|if
+condition|(
+name|o
+operator|==
 literal|null
+condition|)
+return|return
+literal|false
+return|;
+if|if
+condition|(
+operator|!
+operator|(
+name|o
+operator|instanceof
+name|Term
+operator|)
 condition|)
 return|return
 literal|false
